# reaf

./: .readthedocs.yaml  CMakeLists.txt  README.md  mkdocs.yml  pyproject.toml
docs/: best_practices.md  core_concepts.md  index.md  license.md
docs/tutorials/: adapters.md  index.md  reset_functions.md  simple_env_from_devices.md  tasks.md
example/: agent_environment_loop_example.py  ideal_robot.py  ideal_robot_coordinator.py  ideal_robot_device.py  pd_agent.py  robot_environment.py  stdout_logger.py  task_logic_elements.py
src/reaf/common/: clip_commands_processor.py  compute_velocity_command.py  concatenate_features_producer.py  crop_image_features_producer.py  delta_to_absolute_commands_processor.py  device_sequence_coordinator.py  environment_from_devices.py  environment_reset_from_callable.py  external_signal_sparse_reward_provider.py  external_signal_termination_checker.py  flatten_features_producer.py  map_utils.py  maximum_steps_termination_checker.py  maximum_wall_clock_time_termination_checker.py  moving_average_filter_commands_processor.py  out_of_bounds_termination_checker.py  partitioner_action_space_adapter.py  position_to_velocity_commands_processor.py  relative_clip_commands_processor.py  rotation_matrix_to_quaternion_feature_producer.py  sequential_end_of_episode_handler.py  sequential_environment_reset.py  stack_features_producer.py  time_trigger.py  timestamp_features_producer.py  workspace_limits_termination_checker.py
src/reaf/core/: action_space_adapter.py  commands_processor.py  data_acquisition_and_control_layer.py  default_discount_provider.py  default_observation_space_adapter.py  device.py  device_coordinator.py  device_layer.py  discount_provider.py  environment.py  features_observer.py  features_producer.py  logger.py  numpy_mock_assertions.py  observation_space_adapter.py  pass_through_action_space_adapter.py  reward_provider.py  task_layer.py  task_logic_layer.py  termination_checker.py  trigger.py  zero_reward_provider.py
src/reaf/testing/: device_assertions.py  fakes.py  tree_spec_validation_assertions.py
tests/reaf/common/: clip_commands_processor_test.py  compute_velocity_command_test.py  concatenate_features_producer_test.py  crop_image_features_producer_test.py  delta_to_absolute_commands_processor_test.py  device_sequence_coordinator_test.py  environment_from_devices_test.py  environment_reset_from_callable_test.py  external_signal_sparse_reward_provider_test.py  external_signal_termination_checker_test.py  flatten_features_producer_test.py  map_utils_test.py  maximum_steps_termination_checker_test.py  maximum_wall_clock_time_termination_checker_test.py  moving_average_filter_commands_processor_test.py  out_of_bounds_termination_checker_test.py  partitioner_action_space_adapter_test.py  position_to_velocity_commands_processor_test.py  relative_clip_commands_processor_test.py  rotation_matrix_to_quaternion_feature_producer_test.py  sequential_end_of_episode_handler_test.py  sequential_environment_reset_test.py  stack_features_producer_test.py  time_trigger_test.py  timestamp_features_producer_test.py  workspace_limits_termination_checker_test.py
tests/reaf/core/: data_acquisition_and_control_layer_test.py  default_discount_provider_test.py  default_observation_space_adapter_test.py  device_layer_test.py  environment_test.py  pass_through_action_space_adapter_test.py  task_layer_test.py  (+4 more)
(+8 files in other folders)
